# obs-scene-collection-manager

./: CMakeLists.txt  README.md  SceneCollectionManager.ui  buildspec.json  installer.iss.in  scene-collection-manager.cpp  scene-collection-manager.hpp
.github/scripts/utils.zsh/: check_packages
.github/workflows/: build.yml
CI/macos/: scene-collection-manager.pkgproj
data/locale/: de-DE.ini  en-US.ini  pt-BR.ini  zh-CN.ini
